[gd_scene load_steps=9 format=3 uid="uid://b41duq7aaam12"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_dw2er"]
[ext_resource type="Texture2D" uid="uid://rv8e3yhwh3yw" path="res://graphics/player/player.png" id="1_th1rh"]
[ext_resource type="Texture2D" uid="uid://n6s7l75d7uft" path="res://graphics/decals/white.png" id="3_y5n8s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_16v0l"]
radius = 74.0068

[sub_resource type="Gradient" id="Gradient_cf3ne"]
colors = PackedColorArray(0.564706, 0.996078, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_a46vc"]
gradient = SubResource("Gradient_cf3ne")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xq1rg"]
particle_flag_disable_z = true
direction = Vector3(3, 0, 0)
spread = 46.304
initial_velocity_min = 750.0
initial_velocity_max = 1000.0
gravity = Vector3(0, 0, 0)
color = Color(0.721569, 1, 1, 1)
color_ramp = SubResource("GradientTexture1D_a46vc")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_sp22x"]
polygon = PackedVector2Array(-15, -48, 1, -49, 12, -52, 24, -44, 28, -37, 35, -29, 33, -26, 39, -19, 49, -16, 54, -12, 62, -3, 67, 2, 79, 1, 84, 4, 89, 7, 98, 8, 102, 11, 105, 12, 110, 11, 115, 12, 113, 17, 112, 18, 116, 19, 118, 17, 121, 19, 123, 24, 123, 29, 123, 36, 121, 40, 119, 42, 114, 43, 111, 40, 111, 43, 113, 47, 109, 48, 102, 46, 98, 42, 98, 45, 96, 49, 91, 51, 88, 53, 88, 57, 87, 62, 79, 64, 60, 63, 51, 62, 47, 55, 46, 52, 37, 50, 32, 51, 27, 54, 15, 56, 6, 62, -2, 66, -15, 69, -27, 70, -38, 69, -44, 65, -47, 61, -46, 57, -47, 54, -51, 52, -53, 45, -53, 43, -56, 41, -62, 38, -62, 31, -60, 28, -61, 25, -64, 24, -68, 19, -70, 14, -71, 6, -71, 0, -70, -8, -68, -13, -65, -21, -63, -26, -59, -30, -55, -34, -50, -36, -45, -36, -40, -36, -37, -37, -37, -40, -37, -42, -33, -44, -31, -44, -27, -46, -24, -47, -22, -47, -22, -45, -19, -44)

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_dw2er")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(27, 11)
rotation = 1.5708
texture = ExtResource("1_th1rh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 13)
shape = SubResource("CircleShape2D_16v0l")

[node name="TimerLaser" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerGrenade" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(122, 30)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(120, 37)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(121, 23)

[node name="ShootDust" type="GPUParticles2D" parent="."]
position = Vector2(124, 30)
emitting = false
amount = 4
process_material = SubResource("ParticleProcessMaterial_xq1rg")
texture = ExtResource("3_y5n8s")
lifetime = 0.05
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_sp22x")

[connection signal="timeout" from="TimerLaser" to="." method="_on_timer_laser_timeout"]
[connection signal="timeout" from="TimerGrenade" to="." method="_on_timer_grenade_timeout"]
